mesh_config/test_env.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: algorithm-test
  labels:
    istio-injection: enabled
    linkerd.io/inject: enabled
