mesh_config/service_selector_config_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service-2
  namespace: algorithm-test
  labels:
    app: test-service
    service: service-2
spec:
  selector:
    app: test-service
    service: service-2
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
